[gd_scene load_steps=9 format=3 uid="uid://srq4btryqe3j"]

[ext_resource type="Script" path="res://autoload/audio_manager.gd" id="1_0pu4h"]
[ext_resource type="AudioStream" uid="uid://8c1n657aunwx" path="res://assets/Audio/Ambient/AmbientExploration.mp3" id="2_u5hqx"]
[ext_resource type="AudioStream" uid="uid://cjy6v3vpr08d2" path="res://assets/Audio/SFX/Ui/UiInput.wav" id="3_bhcni"]
[ext_resource type="AudioStream" uid="uid://dh3hqgcwc5ujb" path="res://assets/Audio/Ambient/Battle.mp3" id="3_cgmyu"]
[ext_resource type="AudioStream" uid="uid://ck4ydkvoab8xq" path="res://assets/Audio/Ambient/MainMenu.mp3" id="4_eeih8"]
[ext_resource type="AudioStream" uid="uid://cubkeat2emjh2" path="res://assets/Audio/SFX/Ui/UiSelect.wav" id="4_k6mw4"]
[ext_resource type="AudioStream" uid="uid://dw34jnugqxt4y" path="res://assets/Audio/Ambient/intro.mp3" id="5_bny43"]
[ext_resource type="AudioStream" uid="uid://ce2m8cuywgqhg" path="res://assets/Audio/SFX/Ui/UiCancel.wav" id="5_ebcd4"]

[node name="AudioManager" type="Node"]
script = ExtResource("1_0pu4h")

[node name="AmbientExploration" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_u5hqx")

[node name="Battle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_cgmyu")

[node name="MainMenu" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_eeih8")

[node name="Intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_bny43")

[node name="Ui" type="Node" parent="."]

[node name="Input" type="AudioStreamPlayer" parent="Ui"]
stream = ExtResource("3_bhcni")

[node name="Select" type="AudioStreamPlayer" parent="Ui"]
stream = ExtResource("4_k6mw4")
volume_db = -10.0

[node name="Cancel" type="AudioStreamPlayer" parent="Ui"]
stream = ExtResource("5_ebcd4")

[connection signal="finished" from="AmbientExploration" to="." method="_on_audio_stream_player_finished"]
[connection signal="finished" from="Battle" to="." method="_on_battle_finished"]
[connection signal="finished" from="MainMenu" to="." method="_on_main_menu_finished"]
[connection signal="finished" from="Intro" to="." method="_on_intro_finished"]
